# kuru-pipeline

./: .env.example  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  audit_chunks.py  clear_chunks.py  ingestion_monitor.py  pyproject.toml  reingest_targets.py  test_rag_quality.py
.claude/: settings.json  settings.local.json
data/: program_name_mapping.csv
data/native/curriculum/กพส/ศวท/: ศิลปศาสตร์และวิทยาศาสตร์.txt
data/native/curriculum/บางเขน/ศึกษาศาสตร์/: ศึกษาศาสตร์.txt
data/native/curriculum/บางเขน/สถาปัตย์/: สถาปัตย์.txt
data/native/curriculum/บางเขน/เศรษฐศาสตร์/: EEBA_Final-.doc
data/native/curriculum/สกลนคร/วิทยาศาสตร์และวิศวกรรมศาสตร์/: วว.txt
data/native/tcas/: 69-TCAS3-เกณฑ์การคัดเลือก-OK.xlsx
db/: schema.sql
docs/: ISSUES.md  MEETING_PREP.md  SETUP.md  SRS_CONTEXT.md  STATUS.md  ingest-status.md  ingestion-guide.md  scraper-issue-scanned-pdfs.md  scraper.md
docs/superpowers/plans/: 2026-04-29-poc-pipeline-redesign.md
docs/superpowers/specs/: 2026-04-29-poc-pipeline-redesign-design.md  2026-05-06-rag-product-launch-design.md
src/kuru/: llm.py
src/kuru/db/: neo4j_client.py  supabase_client.py
src/kuru/ingestion/: chunker.py  embedder.py  ocr_extractor.py  pdf_classifier.py  plo_extractor.py  structured_extractor.py  tcas_extractor.py  text_extractor.py  utils.py
src/kuru/rag/: query_engine.py
src/kuru/scripts/: coverage_report.py  demo_rag.py  download_data.py  ingest_curriculum.py  ingest_tcas.py  scrape_curriculum.py  setup_db.py
tests/: test_structured_extractor.py  test_text_extractor.py
(+6 files in other folders)
